# ro_ptr

./: .drone.jsonnet  .gitignore  BUILD.bazel  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  dir_9639556fd8de04ba8f6abb3db2784618.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  ptr_8h_source.html  structreadonly_1_1ro__ptr-members.html  structreadonly_1_1ro__ptr.html
.github/workflows/: doxygen.yml
examples/: doc.cc  showcase.cc
include/ro/: ptr.h
search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
